--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/date-fns": "^2.5.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "date-fns": "^2.30.0",
     "framer-motion": "^12.6.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
